--- a/views/add.ejs
+++ b/views/add.ejs
@@ -25,6 +25,7 @@
     <br /><br />
     <label id="Status" for="Status">Marriage Status </label>
     <select type="boolean" id="Status" name="status" >
+      <option value=''>choose your choice</option>
       <option value='true'>true</option>
       <option value='false'>false</option>
     </select>
