--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -27,7 +27,7 @@
     <br /><br />
     <label id="Status" for="Status" > Marriage Status</label>
     <select  type="boolean" id="Status" name="status" >
-        
+      <option value="">Choose your choice</option>
       <option value="true">true</option>
       <option value="false">false</option>
     </select>
