--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,47 +8,63 @@
     <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
-    <form action="/add" method="post">
+    <form action="" method="GET">
+      <input type="hidden" name="page" value="1">
       <h1>BREAD (Browse Read Edit Delete)</h1>
       
-      <label id="Name" for="Name">Name</label>
-      <input type="text" id="Name" name="name" placeholder="Enter your name" />
+      <input onclick="myFunction1()" type="checkbox" id="myCheck1">
+      <label for="Name">Name</label>
+      <input type="text" id="Name" name="name" placeholder="Enter your name" value="<%= query.name %>" disabled />
+      
       <br /><br />
-      <label id="Weight" for="Weight">Weight</label>
+
+      <input onclick="myFunction2()" type="checkbox" id="myCheck2">
+      <label for="Weight">Weight</label>
       <input
         type="number"
         id="Weight"
         name="weight"
         placeholder="Enter your weight (kg)"
+        value="<%= query.weight %>"
+        disabled
       />
       <br /><br />
-      <label id="Height" for="Height">Height</label>
+      <input onclick="myFunction3()" type="checkbox" id="myCheck3">
+      <label for="Height">Height</label>
       <input
         type="number"
         id="Height"
         name="height"
         placeholder="Enter your Height (cm)"
+        value="<%= query.height %>"
+        disabled
       />
       <br /><br />
-      <label id="Date"  >Date</label>
+      <input onclick="myFunction4()" type="checkbox" id="myCheck4">
+      <label >Date</label>
       <input class="date"
         type="date"
-        
-        name="date"
+        id="start" 
+        name="start"
+        value="<%= query.date %>"
+        disabled
         
       /> to
       <input class="date"
         type="date"
-        
-        name="date"
+        id="end" 
+        name="end"
         placeholder="Enter your birthdate"
+        value="<%= query.date %>"
+        disabled
       />
       <br /><br />
-      <label id="Status" for="Status">Marriage Status </label>
-      <select type="boolean" id="Status" name="status">
-        
-        <option value="true">true</option>
-        <option value="false">false</option>
+      <input onclick="myFunction5()" type="checkbox" id="myCheck5">
+      <label for="Status">Marriage Status </label>
+      <select type="boolean" id="Status" name="status" disabled>
+        <option value="">Choose your choice</option>
+        <option value="true"<%= query.status == 'true' ? ' selected' : '' %>>true</option>
+        <option value="false"<%= query.status == 'false' ? ' selected' : '' %>>false</option>
       </select>
       <br /><br />
       <button type="submit" class="save">Search</button>
@@ -82,14 +98,20 @@
       <br /><br />
       <div class="pagination">
        
-        <% if(page >= 1) { %>
-          <a href="/?page=<%= page - 1 %>&size=<%= 3 %>">Previous</a>
+        <% if(page > 1) { %>
+          <% let i = page  %>
+          <% i--  %>
+          <a href="<%= url.replace(`page=${page}`, `page=${i}`) %>">Previous</a>
+          
           <% } %>
-        <% for(let i = 0; i < jumlahHalaman ; i++) { %>
-        <a href="/?page=<%= i %>&size=<%= 3 %>"><%= i + 1 %></a>
+        <% for(let i = 1; i <= pages ; i++) { %>
+        <a href="<%= url.replace(`page=${page}`, `page=${i}`) %>"><%= i %></a>
         <% } %>
-        <% if(page < jumlahHalaman - 1) { %>
-          <a href="/?page=<%= page - 1 %>&size=<%= 3 %>">Next</a>
+        <% if(page <= pages - 1) { %>
+          <% let i = page  %>
+          <% i++  %>
+          <a href="<%= url.replace(`page=${page}`, `page=${i}`) %>">Next</a>
+          
           <% } %>
          
       </div> 
@@ -97,5 +119,60 @@
       <button><a class="add" href="add"> Add</a></button>
       
     </form>
+    <script>
+      function myFunction1() {
+        if (document.getElementById("myCheck1").checked == true) {
+          document.getElementById("Name").disabled = false;
+        }
+        else {
+          document.getElementById("Name").disabled = true;
+        }
+        
+      }
+      function myFunction2() {
+        if (document.getElementById("myCheck2").checked == true) {
+          document.getElementById("Weight").disabled = false;
+        }
+        else {
+          document.getElementById("Weight").disabled = true;
+        }
+        
+      }
+
+      function myFunction3() {
+        if (document.getElementById("myCheck3").checked == true) {
+          document.getElementById("Height").disabled = false;
+        }
+        else {
+          document.getElementById("Height").disabled = true;
+        }
+        
+      }
+
+      function myFunction4() {
+        if (document.getElementById("myCheck4").checked == true) {
+          document.getElementById("start").disabled = false;
+          document.getElementById("end").disabled = false;
+        }
+        else {
+          document.getElementById("start").disabled = true;
+          document.getElementById("end").disabled = true;
+        }
+        
+      }
+
+      function myFunction5() {
+        if (document.getElementById("myCheck5").checked == true) {
+          document.getElementById("Status").disabled = false;
+        }
+        else {
+          document.getElementById("Status").disabled = true;
+        }
+        
+      }
+      </script>
+      
   </body>
 </html>
+
+
