challenge is donee

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -46,7 +46,7 @@
         type="date"
         id="start" 
         name="start"
-        value="<%= query.date %>"
+        value="<%= query.start  %>"
         disabled
         
       /> to
@@ -55,7 +55,7 @@
         id="end" 
         name="end"
         placeholder="Enter your birthdate"
-        value="<%= query.date %>"
+        value="<%= query.end %>"
         disabled
       />
       <br /><br />
