--- a/views/index.ejs
+++ b/views/index.ejs
@@ -81,7 +81,7 @@
         </tr>
         <% nama.forEach((item, index) => { %>
         <tr class="genap">
-          <td><%= index + 1 %></td>
+          <td><%= item.id %></td>
           <td><%= item.nama %></td>
           <td><%= item.berat %></td>
           <td><%= item.tinggi %></td>
